package org.mcr.lab2.display.clocks;

public interface View {
    void update();
}
