@startuml
interface IChronoSubject{
+ attach (o : View) : void
+ detach (o : View) : void
+ notifyViews() : void
}
class ChronoSubject extends IChronoSubject{
- id : int
- chrono: Chrono
- timer: Timer
- elapsedTime : long
- observingViews: List<View>
+ ChronoSubject(chrono:Chrono)
+ getElapsedTime():long
+ getId():int
+ start():void
+ stop():void
+ reset():void
- poolChrono():void
}
interface View {
+ update() : void
}
class Roman extends View{
-{static}IMAGE_PATH:String
}
class Arab extends View{
-{static} IMAGE_PATH:String
}
class Digital extends View{
}
class Clock {
- image :Image
- Clock(imagePath:String)
+ draw(time : long):void
}
class ClockFactory {
+ createClock(imagePath:String)
}
class Chrono {
- enabled:boolean
- start:Instant
- restartOffset:long
+ Chrono()
+ start():void
+ stop():void
+ reset():void
+ getElapsedTime():long
+ isEnabled():boolean
}
class ControlsView {
- nbChronos:int
- chronos:ChronoSubject[]
+ ControlsView(nbChronos:int)
- updateLayout(frame:JFrame,panel:JPanel,count:int):void
- createRomanClockView(row:int):void
- createArabClockView(row:int):void
- createDigitalClockView(row:int):void
- setCommonSingularClockViewAttributes(frame:JFrame,panel:JPanel,row:int):void
- setCommonMultipleClockViewsAttributes(frame:JFrame,panel:JPanel,subjectViewMap:Map<ChronoSubject,View>):void
}

Roman"*" -- "1"Clock
Roman"*" -- "1"ChronoSubject
Arab"*" -- "1"Clock
Arab"*" -- "1"ChronoSubject
Digital"*" -- "1"ChronoSubject
ChronoSubject"1" -- "1"Chrono
ControlsView"1" -- "1-9"ChronoSubject
ClockFactory -- Clock
ClockFactory -right- Roman
ClockFactory -right- Arab

@enduml
